<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sms"
            android:icon="@drawable/sms_icon"
            android:title="@string/menu_sms" />
        <item
            android:id="@+id/nav_dial"
            android:icon="@drawable/dial_icon"
            android:title="@string/menu_dial" />
        <item
            android:id="@+id/nav_call"
            android:icon="@drawable/call_icon"
            android:title="@string/menu_call" />
        <item
            android:id="@+id/nav_sharing"
            android:icon="@drawable/share_icon"
            android:title="@string/menu_sharing" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/map_icon"
            android:title="@string/title_activity_maps" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_mail"
                android:icon="@drawable/email_icon"
                android:title="@string/menu_email" />
            <item
                android:id="@+id/nav_pesa"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_pesa" />
            <item
                android:id="@+id/nav_camera"
                android:icon="@drawable/camera_icon"
                android:title="@string/menu_camera" />
        </menu>
    </item>

</menu>
